fix: fixed modal in product page and change bg main_screen

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <!-- </div> -->
 
 
-                <button class="my-products__button">
+                <button class="my-products__katalog">
                     <a href="products.html"> В КАТАЛОГ</a>
                 </button>
             </section>
