--- a/products.html
+++ b/products.html
@@ -82,7 +82,7 @@
             <div class="burger-menu">
                 <nav class="burger__navigation">
                     <ul class="burger__list">
-                        <li><a href="#about-me">ОБО МНЕ</a> </li>
+                        <li><a href="index.html#about-me">ОБО МНЕ</a> </li>
                         <li><a href="index.html#my-products">МОИ РАБОТЫ</a></li>
                         <li><a href="products.html">КАТАЛОГ</a></li>
                         <li><a href="#in-stock" id="inStock">В НАЛИЧИИ </a></li>
